[tool.poetry]
name = "flockwave-async"
version = "1.3.1"
description = "Asynchronous utility functions and classes, mostly for Trio"
authors = ["Tamas Nepusz <tamas@collmot.com>"]
packages = [
    { include = "flockwave", from = "src" }
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
trio = ">=0.18.0"
trio-util = ">=0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-trio = ">=0.6.0"
pytest-cov = "^3.0.0"
coverage = {extras = ["toml"], version = "^6.0"}

[[tool.poetry.source]]
name = "collmot"
url = "https://pypi.collmot.com/simple/"
secondary = true

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
secondary = true

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
