[tool.poetry]
name = "flockwave-async"
version = "1.4.0"
description = "Asynchronous utility functions and classes, mostly for Trio"
authors = ["Tamas Nepusz <tamas@collmot.com>"]
packages = [{ include = "flockwave", from = "src" }]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
trio = "^0.22.2"
trio-util = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-trio = "^0.8.0"
pytest-cov = "^4.1.0"
coverage = { extras = ["toml"], version = "^7.2.7" }

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "collmot"
url = "https://pypi.collmot.com/simple/"
priority = "explicit"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
priority = "supplemental"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
ignore = ["B905", "C901", "E402", "E501"]
line-length = 80
select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
