[project]
name = "flockwave-async"
version = "2.2.0"
description = "Asynchronous utility functions and classes, mostly for Trio"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "trio>=0.24.0",
    "trio-util>=0.7.0",
    "exceptiongroup>=1.2.0",
    "anyio>=4.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.0",
    "pytest-trio>=0.8.0",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.4.0",
]

[tool.uv.build-backend]
module-name = "flockwave.concurrency"

[[tool.uv.index]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
publish-url = "https://pypi.fury.io/skybrush/"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_also = ["@(abc\\.)?abstractmethod", "@overload"]
show_missing = true

[tool.pytest.ini_options]
trio_mode = true

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["uv_build>=0.8.0"]
build-backend = "uv_build"
